--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,11 @@
         </activity>
 
         <activity android:name=".UpdateActivity" />
-        <activity android:name=".SignUpActivity" />
-        <activity android:name=".SignInActivity"/>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".SignUpActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity android:name=".SignInActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+        <activity android:name=".MainActivity"/>
 
         <activity
             android:name=".SecondActivity"
